Refactor MapActiveInfo/Reason/DiscountPromotion DTOs to proper domain packages, add cross-service product offering lookup by ids
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>